Add docker to the Zephyr example
Change include paths as they clash with NCS v1.8.0.
Change west.yaml so it pulls ncs instead of zephyr
Add docker_scripts directory with Dockerfile and supporting scripts.
Update README with instructions.

--- a/west.yml
+++ b/west.yml
@@ -6,11 +6,12 @@ manifest:
     path: example-application
 
   remotes:
-    - name: zephyrproject-rtos
-      url-base: https://github.com/zephyrproject-rtos
+    - name: nrfconnect
+      url-base: https://github.com/nrfconnect
 
   projects:
-    - name: zephyr
-      remote: zephyrproject-rtos
-      revision: main
+    - name: nrf
+      repo-path: sdk-nrf
+      remote: nrfconnect
+      revision: v1.8.0
       import: true
