--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,58 @@
 name: Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    container: zephyrprojectrtos/ci:latest
-    env:
-      CMAKE_PREFIX_PATH: /opt/toolchains
+    runs-on: ubuntu-20.04
+    container:
+      image: ghcr.io/markosagadin/ncs-docker-setup/ncs-v1.8.0-docky:latest
+      options: --user root
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          path: example-application
+          path: project
 
-      - name: Initialize
-        working-directory: example-application
+      - name: Cache west modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-west-modules
+        with:
+          path: |
+            bootloader
+            mbedtls
+            modules
+            nrf
+            nrfxlib
+            test
+            tools
+            zephyr
+          key: ${{ runner.os }}-build-v2-${{ env.cache-name }}-${{ hashFiles('project/west.yml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - name: Initialize West manifest directory
+        run: west init -l project
+
+      - name: Update West manifest directory
         run: |
-          pip3 install -U west
-          west init -l .
           west update
-          pip3 install -r ../zephyr/scripts/requirements-base.txt
 
       - name: Build firmware
-        working-directory: example-application
         run: |
-          west build -b custom_plank -s app
+          west build -b custom_plank -s project/app
 
       - name: Archive firmware
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: example-application/build/zephyr/zephyr.*
+          path: build/zephyr/zephyr.*
